Fixed text-align label

--- a/src/index.css
+++ b/src/index.css
@@ -183,7 +183,6 @@
 .currency-exchange {
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
   width: 45%;
   height: 100%;
   border: 2px solid white;
@@ -194,6 +193,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  text-align: center;
   padding-bottom: 10px;
   font-size: 1.5rem;
   color: white;
@@ -273,8 +273,6 @@
   .currency-exchange label {
     font-size: 1.1rem;
     font-weight: lighter;
-    padding-top: 5px;
-    border: none;
   }
   .currency-exchange div {
     width: 100%;
